<resources>
    <string name="Category">Category</string>
    <string name="Tags">Tags</string>
    <string name="_deleteAccount">Delete account</string>
    <string name="_deletemessage">Are you sure you want to delete your account?</string>
    <string name="_deletetitle">Delete account?</string>
    <string name="_forgot_password">Forgot password?</string>
    <string name="_skip">Skip</string>
    <string name="_valid_email">Invalid email address</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="additionalInfo">Additional Information</string>
    <string name="address">Address</string>
    <string name="and">&amp;</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Jelantara</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance_dark">Dark</string>
    <string name="appearance_device_theme">Device theme</string>
    <string name="appearance_light">Light</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="bookmark">Bookmarks</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="byCreating">By creating an account, you agree to our</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cart">Cart</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_with_us">Chat</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="close_app">Close app</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="com.crashlytics.android.build_id">546427a1702b4cd2a71cf06e089224a1</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_change">Confirm language change</string>
    <string name="consent_head">To use this app you have to be above the age of 18.</string>
    <string name="consent_text">"Excessive consumption of alcohol is harmful to your health, don't drink and drive"</string>
    <string name="continu">Continue</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="coupon_discount">Coupon discount</string>
    <string name="create">Create</string>
    <string name="create_account">Create account</string>
    <string name="create_an_account"><font color="#333333">"Don't have an account?"</font> <font color="#3064f9">Sign Up</font></string>
    <string name="customer_reviews">Customer reviews</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_web_client_id">746110489421-mhk5msmkfrc5703cig9hpnrv89t2oq0t.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_account_message">Are you sure you want to delete your account? This may relaunch your app.</string>
    <string name="display_popup_settings">To continue receiving important updates, enable the “Display pop-up windows while running in the background” option found inside the “Other Permissions” tab in app settings.</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="eight_character">The password must be at least %d characters.</string>
    <string name="email">Email</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="enter_old_password_error">Current password is a required field.</string>
    <string name="enter_your_email_to_receive_password_reset_instructions">Enter your email to receive password reset instructions.</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit_popup_message">Are you sure you want to exit?</string>
    <string name="exit_popup_positive_button_text">Exit</string>
    <string name="exit_popup_title">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">454532105165574</string>
    <string name="facebook_client_token">d31c3a5ab4abfdc6edb6fd6cbe37e5a9</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fb_login_protocol_scheme">fb454532105165574</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="featured">Featured</string>
    <string name="first_name_empty_error">First name is a required field.</string>
    <string name="fname_name">First name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="free_plan"></string>
    <string name="gcm_defaultSenderId">746110489421</string>
    <string name="get_started">Get started</string>
    <string name="google_api_key">AIzaSyATWD0fDA6PdA5TEV7Cy-_G9odYmPe7OvA</string>
    <string name="google_app_id">1:746110489421:android:5668ccda2fcbabb9781d04</string>
    <string name="google_crash_reporting_api_key">AIzaSyATWD0fDA6PdA5TEV7Cy-_G9odYmPe7OvA</string>
    <string name="google_storage_bucket">appmysite-custom-app.appspot.com</string>
    <string name="guest">Guest</string>
    <string name="hello_blank_fragment">Hello Main fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_progress">In progress</string>
    <string name="in_stock">in stock</string>
    <string name="language">Language</string>
    <string name="language_dialog_desc">Are you sure you want to change your app’s language? This may relaunch your app.</string>
    <string name="merge_apps">App</string>
    <string name="push_notifications">Push notifications</string>
    <string name="skip">Skip</string>
    <string name="terms_and_conditions_header">Terms &amp; Conditions</string>
    <string name="web_choose_action">Choose an action</string>
    <string name="web_choose_file">Choose file</string>
    <string name="web_chose_gallery">Choose from Gallery</string>
    <string name="web_take_photo">Take Photo</string>
    <string name="website_to_app">"Your no-code
journey starts here."</string>
    <string name="website_to_app_desc">"It’ll only take a few minutes to design, build and
publish your first app."</string>
</resources>