<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/backgroundImage" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" android:layout_centerVertical="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/ams_status" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_alignParentTop="true" />
    <RelativeLayout android:id="@id/rel_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="67.0dip" android:layout_marginBottom="54.0dip" android:layout_below="@id/ams_status">
        <TextView android:textSize="21.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/heading_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip" android:text="@string/consent_head" android:layout_marginStart="47.0dip" android:layout_marginEnd="47.0dip" />
        <TextView android:textSize="13.0sp" android:textColor="#ffa1a1a1" android:gravity="center" android:id="@id/consent_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="46.0dip" android:text="@string/consent_text" android:layout_below="@id/heading_text" android:layout_marginStart="47.0dip" android:layout_marginEnd="47.0dip" />
        <RelativeLayout android:id="@id/rel_accept" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/consent_text" android:layout_centerHorizontal="true">
            <com.appmysite.baselibrary.button.AMSButtonView android:textSize="14.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_accept" android:background="@drawable/consent_button_background" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/accept" android:layout_centerHorizontal="true" android:layout_marginStart="54.0dip" android:layout_marginEnd="54.0dip" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/rel_accept" android:layout_centerHorizontal="true">
            <androidx.compose.ui.platform.ComposeView android:textSize="15.0dip" android:textColor="#ffa1a1a1" android:id="@id/btn_cancel" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/close_app" android:layout_centerHorizontal="true" android:paddingStart="14.0dip" android:paddingEnd="14.0dip" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
