<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/top_guide" android:layout_width="fill_parent" android:layout_height="1.0dip" app:layout_constraintGuide_percent="0.165" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/center_guide" android:layout_width="fill_parent" android:layout_height="1.0dip" app:layout_constraintGuide_percent="0.5" />
    <ImageView android:id="@id/img_app_icons" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/app_icons" android:layout_marginStart="44.0dip" android:layout_marginEnd="44.0dip" app:layout_constraintBottom_toBottomOf="@id/center_guide" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/top_guide" />
    <ImageView android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/ic_appmysite" app:layout_constraintBottom_toTopOf="@id/top_guide" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_percent="0.47" />
    <TextView android:textSize="33.0dip" android:textColor="#ff1b2952" android:gravity="center" android:id="@id/txt_websites_to_apps" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="38.0dip" android:text="@string/website_to_app" android:fontFamily="@font/outfit_bold" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/img_app_icons" />
    <TextView android:textSize="13.0dip" android:textColor="#ff7782a1" android:gravity="center" android:id="@id/website_to_app_desc" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/website_to_app_desc" android:fontFamily="@font/outfit_regular" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_websites_to_apps" />
    <TextView android:textSize="15.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btn_continue" android:background="@drawable/consent_button_background" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="38.0dip" android:text="@string/get_started" android:fontFamily="@font/outfit_regular" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/website_to_app_desc" app:layout_constraintVertical_bias="0.0" />
    <TextView android:textSize="15.0sp" android:textColor="@color/skip_getting_started" android:id="@id/txtSkip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/skip" android:fontFamily="@font/outfit_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_continue" />
    <ProgressBar android:id="@id/progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateDrawable="@drawable/custom_progress" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
