<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/language_root" android:background="#80000000" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_dialog_main" android:background="@drawable/language_dialog_background" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <ImageView android:id="@id/img_close" android:layout_width="34.0sp" android:layout_height="34.0sp" android:layout_marginTop="20.0sp" android:src="@drawable/ic_crossnew" android:layout_marginEnd="20.0sp" app:layout_constraintBottom_toTopOf="@id/txt_language_dialog_head" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="22.0sp" android:textColor="#ff333333" android:id="@id/txt_language_dialog_head" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="14.0sp" android:text="@string/confirm_change" android:fontFamily="@font/outfit_regular" app:layout_constraintBottom_toTopOf="@id/txt_language_desc" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="14.0sp" android:textColor="#ffa1a1a1" android:gravity="center" android:id="@id/txt_language_desc" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="26.0sp" android:text="@string/language_dialog_desc" android:fontFamily="@font/outfit_regular" app:layout_constraintBottom_toTopOf="@id/btn_continue" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintWidth_percent="0.85" />
        <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btn_continue" android:background="@drawable/consent_button_background" android:paddingTop="13.0sp" android:paddingBottom="13.0sp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="50.0sp" android:text="@string/confirm" android:fontFamily="@font/outfit_regular" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintVertical_bias="0.0" app:layout_constraintWidth_percent="0.85" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
