<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/_bottomdialog" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#ff333333" android:id="@id/text_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/web_choose_action" android:layout_centerInParent="true" android:fontFamily="@font/outfit_regular" android:layout_marginStart="20.0dip" android:layout_alignParentStart="true" />
        <ImageView android:layout_gravity="end" android:id="@id/iv_cross" android:layout_width="15.0dip" android:layout_height="15.0dip" android:src="@drawable/n_cross" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_takephoto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginStart="20.0dip">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_camera_webview" />
        <TextView android:textSize="18.0sp" android:textColor="#ffa1a1a1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/web_take_photo" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:fontFamily="@font/outfit_regular" android:layout_marginStart="20.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_choosephoto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gallery_webview" />
        <TextView android:textSize="18.0sp" android:textColor="#ffa1a1a1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/web_chose_gallery" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:fontFamily="@font/outfit_regular" android:layout_marginStart="20.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_choosevideo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gallery_webview" />
        <TextView android:textSize="18.0sp" android:textColor="#ffa1a1a1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Choose From Video" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:fontFamily="@font/outfit_regular" android:layout_marginStart="20.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_choosefile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_marginStart="20.0dip">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_file_manager" />
        <TextView android:textSize="18.0sp" android:textColor="#ffa1a1a1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/web_choose_file" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:fontFamily="@font/outfit_regular" android:layout_marginStart="20.0dip" />
    </LinearLayout>
</LinearLayout>
